Api-Tfg/src/main/kotlin/com/example/Api_Tfg/error/exception/NotFoundException.kt
package com.example.Api_Tfg.error.exception

class NotFoundException  (message: String) : Exception("Not Found (404). $message") {
}